--- a/index.html
+++ b/index.html
@@ -302,38 +302,14 @@
                 <div class="builds__wrapper">
                     <div class="build">
                         <div class="build__card">
-                            <!-- <figure class="build__img--figure">
-                                <img src="./assets/trophy.jpg" alt="" class="build__img">
-                            </figure> -->
-                            <div class="build__features">
-                                <div class="build__border"></div>
-
-                                <p class="build__feature">
-                                    <strong class="text--orange text-uppercase">specs</strong>
-                                </p>
-                                <p class="build__feature">
-                                    Bandwidth: <strong class="text--orange">1GB</strong>
-                                </p>
-                                <p class="build__feature">
-                                    Bandwidth: <strong class="text--orange">1GB</strong>
-                                </p>
-                                <p class="build__feature">
-                                    Bandwidth: <strong class="text--orange">1GB</strong>
-                                </p>
-                                <p class="build__feature">
-                                    Bandwidth: <strong class="text--orange">1GB</strong>
-                                </p>
-                            </div>
-                            <div class="btn build__btn">Join Now</div>
-                        </div>
-                    </div>
-                    <!-- <div class="build">
-                        <div class="build__card">
                             <figure class="build__img--figure">
                                 <img src="./assets/trophy.jpg" alt="" class="build__img">
                             </figure>
                             <div class="build__border"></div>
                             <div class="build__features">
+                                <p class="build__feature">
+                                    <strong class="text--orange text-uppercase">specs</strong>
+                                </p>
                                 <p class="build__feature">
                                     Bandwidth: <strong class="text--orange">1GB</strong>
                                 </p>
@@ -361,6 +337,9 @@
                             <div class="build__border"></div>
                             <div class="build__features">
                                 <p class="build__feature">
+                                    <strong class="text--orange text-uppercase">specs</strong>
+                                </p>
+                                <p class="build__feature">
                                     Bandwidth: <strong class="text--orange">1GB</strong>
                                 </p>
                                 <p class="build__feature">
@@ -378,7 +357,36 @@
                             </div>
                             <div class="btn build__btn">Join Now</div>
                         </div>
-                    </div> -->
+                    </div>
+                    <div class="build">
+                        <div class="build__card">
+                            <figure class="build__img--figure">
+                                <img src="./assets/trophy.jpg" alt="" class="build__img">
+                            </figure>
+                            <div class="build__border"></div>
+                            <div class="build__features">
+                                <p class="build__feature">
+                                    <strong class="text--orange text-uppercase">specs</strong>
+                                </p>
+                                <p class="build__feature">
+                                    Bandwidth: <strong class="text--orange">1GB</strong>
+                                </p>
+                                <p class="build__feature">
+                                    Bandwidth: <strong class="text--orange">1GB</strong>
+                                </p>
+                                <p class="build__feature">
+                                    Bandwidth: <strong class="text--orange">1GB</strong>
+                                </p>
+                                <p class="build__feature">
+                                    Bandwidth: <strong class="text--orange">1GB</strong>
+                                </p>
+                                <p class="build__feature">
+                                    Bandwidth: <strong class="text--orange">1GB</strong>
+                                </p>
+                            </div>
+                            <div class="btn build__btn">Join Now</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
