--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/favicon.ico">
     <script src="https://kit.fontawesome.com/fe8d5b01c4.js" crossorigin="anonymous"></script>
     <script src="index.js" defer></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_jl5VpeVakRdeOB5W1XDRJ");
+        })();
+    </script>
     <title>Rockville Robotics</title>
 </head>
 
@@ -55,7 +62,7 @@
                             Team Leaders</a>
                     </li>
                     <li class="nav__link">
-                        <a href="#" class="
+                        <a href="#contact" class="
                                     nav__link--anchor 
                                     link__hover-effect 
                                     link__hover-effect--white">
@@ -157,8 +164,8 @@
                             Digital Design
                         </h4>
                         <p class="value__para">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content. Moltin gives you the platform.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nemo dicta nam harum
+                            consequuntur
                         </p>
                     </div>
                     <div class="value">
@@ -169,8 +176,8 @@
                             Digital Design
                         </h4>
                         <p class="value__para">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content. Moltin gives you the platform.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nemo dicta nam harum
+                            consequuntur
                         </p>
                     </div>
                     <div class="value">
@@ -181,8 +188,8 @@
                             Digital Design
                         </h4>
                         <p class="value__para">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content. Moltin gives you the platform.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nemo dicta nam harum
+                            consequuntur
                         </p>
                     </div>
                     <div class="value">
@@ -193,8 +200,8 @@
                             Digital Design
                         </h4>
                         <p class="value__para">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content. Moltin gives you the platform.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nemo dicta nam harum
+                            consequuntur
                         </p>
                     </div>
                     <div class="value">
@@ -205,8 +212,8 @@
                             Digital Design
                         </h4>
                         <p class="value__para">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content. Moltin gives you the platform.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nemo dicta nam harum
+                            consequuntur
                         </p>
                     </div>
                     <div class="value">
@@ -217,8 +224,8 @@
                             Digital Design
                         </h4>
                         <p class="value__para">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content. Moltin gives you the platform.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam nemo dicta nam harum
+                            consequuntur
                         </p>
                     </div>
                 </div>
@@ -234,22 +241,22 @@
                             About Us
                         </h3>
                         <p class="about-us__box--para">
-                            Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
-                            ocean. A small river named Duden flows by their place and supplies it with the necessary
-                            regelialia.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi alias ad dolorem tenetur
+                            perspiciatis similique illo magnam ea nam quo cumque delectus, voluptates molestiae, esse
+                            voluptatem ipsa? Inventore, ex cum.
                         </p>
                         <ul class="about-us__box--lists">
                             <li class="about-us__box--list">
-                                We put a lot of effort in design.
+                                Lorem ipsum dolor sit amet consectetur
                             </li>
                             <li class="about-us__box--list">
-                                We put a lot of effort in design.
+                                Lorem ipsum dolor sit amet consectetur
                             </li>
                             <li class="about-us__box--list">
-                                We put a lot of effort in design.
+                                Lorem ipsum dolor sit amet consectetur
                             </li>
                             <li class="about-us__box--list">
-                                We put a lot of effort in design.
+                                Lorem ipsum dolor sit amet consectetur
                             </li>
                         </ul>
                         <button href="#" class="btn">
@@ -275,8 +282,8 @@
                         Parts List
                     </h2>
                     <p class="parts__content--para">
-                        But nothing the copy said could convince her and so it didn’t take long until a few insidious
-                        Copy Writers ambushed her.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, mollitia in at cupiditate
+                        distinctio omnis quos accu
                     </p>
                     <button href="#" class="btn parts__btn">
                         View Parts List & Cost
@@ -391,6 +398,140 @@
             </div>
         </div>
     </section>
+    <section id="team-leaders">
+        <div class="container">
+            <div class="row">
+                <div class="header__content values__header--content">
+                    <h1 class="header__title values__header--title">Leadership</h1>
+                    <div class="section__title--border"></div>
+                    <p class="header__para values__header--para">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Velit earum natur, libero maiores eum, consectetur..
+                    </p>
+                </div>
+                <div class="team-leaders__card--wrapper">
+                    <div class="team-leaders__card">
+                        <figure class="card__img--figure">
+                            <img class="card__img"
+                                src="https://assets.entrepreneur.com/content/3x2/2000/20190918135414-tommy-shelby-peaky-blinders.jpeg?crop=1:1"
+                                alt="">
+                        </figure>
+                        <h4 class="card__name">
+                            Digital Design
+                        </h4>
+                        <p class="card__title">
+                            Team Captian
+                        </p>
+                    </div>
+                    <div class="team-leaders__card">
+                        <figure class="card__img--figure">
+                            <img class="card__img"
+                                src="https://assets.entrepreneur.com/content/3x2/2000/20190918135414-tommy-shelby-peaky-blinders.jpeg?crop=1:1"
+                                alt="">
+                        </figure>
+                        <h4 class="card__name">
+                            Digital Design
+                        </h4>
+                        <p class="card__title">
+                            Team Captian
+                        </p>
+                    </div>
+                    <div class="team-leaders__card">
+                        <figure class="card__img--figure">
+                            <img class="card__img"
+                                src="https://assets.entrepreneur.com/content/3x2/2000/20190918135414-tommy-shelby-peaky-blinders.jpeg?crop=1:1"
+                                alt="">
+                        </figure>
+                        <h4 class="card__name">
+                            Digital Design
+                        </h4>
+                        <p class="card__title">
+                            Team Captian
+                        </p>
+                    </div>
+                    <div class="team-leaders__card">
+                        <figure class="card__img--figure">
+                            <img class="card__img"
+                                src="https://assets.entrepreneur.com/content/3x2/2000/20190918135414-tommy-shelby-peaky-blinders.jpeg?crop=1:1"
+                                alt="">
+                        </figure>
+                        <h4 class="card__name">
+                            Digital Design
+                        </h4>
+                        <p class="card__title">
+                            Team Captian
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="container">
+            <div class="row contact__row">
+                <div class="header__content values__header--content">
+                    <h1 class="header__title values__header--title text-uppercase">Get in Touch</h1>
+                    <div class="section__title--border"></div>
+                    <p class="header__para values__header--para">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Velit earum natur, libero maiores eum, consectetur..
+                    </p>
+                </div>
+                <form class="contact__form" onsubmit="contact(event)">
+                    <div class="modal__overlay modal__overlay--success">
+                        Thanks for the message!
+                    </div>
+                    <div class="contact__personal--info">
+                        <input type="text" name="user_name" class="contact__input contact__form--name"
+                            placeholder="Your Name" required>
+                        <input type="email" name="user_email" class="contact__input contact__form--email"
+                            placeholder="Your Email" required>
+                    </div>
+                    <input type="text" name="subject" class="contact__input contact__form--subject"
+                        placeholder="Your Subject">
+                    <textarea style="resize: none;" name="message" type="text"
+                        class="contact__input contact__form--message" placeholder="Your message"></textarea>
+                    <div class="contact__btn--wrapper">
+                        <button class="btn contact__btn"><span class="contact__btn--text">Send Message</span></button>
+                        <div class="modal__overlay modal__overlay--loading">
+                            <i class="fas fa-spinner"></i>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="row footer__row">
+                <a href="#" class="footer__anchor">
+                    <figure>
+                        <img class="footer__logo--img logo--white click" src="./assets/incredibots_logo.jpeg" alt="" />
+                    </figure>
+                    <span class="footer__logo--popper click">
+                        Top
+                        <i class="fas fa-arrow-up" aria-hidden="true"></i>
+                    </span>
+                </a>
+                <div class="footer__social--list">
+                    <a href="#" target="_blank" class="
+                          footer__social--link
+                          link__hover-effect link__hover-effect--white">
+                        GitHub
+                    </a>
+                    <a href="#" target="_blank" class="
+                          footer__social--link
+                          link__hover-effect link__hover-effect--white">
+                        Instagram
+                    </a>
+                    <a href="#" target="_blank" class="
+                          footer__social--link
+                          link__hover-effect link__hover-effect--white">
+                        Youtube
+                    </a>
+                </div>
+                <div class="footer__copyright">Copyright &copy; 2022 Jawad Hanif</div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
