--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
             <div class="header__wave-effect wave-anim">
                 <div class="header__wave-shape shape-one">
                     <div class="wave__img wave-one" draggable="false"
-                        style="background-image: url('http://dorsin.svelte.themesbrand.com/images/wave-shape/wave1.png')">
+                        style="background-image: url('./assets/anim_wave.png')">
                     </div>
                 </div>
                 <div class="header__wave-shape shape-two">
                     <div class="wave__img wave-two" draggable="false"
-                        style="background-image: url('http://dorsin.svelte.themesbrand.com/images/wave-shape/wave2.png')">
+                        style="background-image: url('./assets/anim_wave2.png')">
                     </div>
                 </div>
                 <div class="header__wave-shape shape-three">
                     <div class="wave__img wave-three" draggable="false"
-                        style="background-image: url('http://dorsin.svelte.themesbrand.com/images/wave-shape/wave3.png')">
+                        style="background-image: url('./assets/anim_wave3.png')">
                     </div>
                 </div>
             </div>
@@ -479,7 +479,7 @@
                     <div class="modal__overlay modal__overlay--success">
                         Thanks for the message!
                     </div>
-                    <div class="contact__personal--info" >
+                    <div class="contact__personal--info">
                         <input type="text" name="user_name" class="contact__input contact__form--name"
                             placeholder="Your Name" required>
                         <input type="email" name="user_email" class="contact__input contact__form--email"
