--- a/index.html
+++ b/index.html
@@ -118,8 +118,11 @@
                                     <a href="#" class="play__btn--icon click">
                                         <i class="fas fa-play"></i>
                                     </a>
-                                    <iframe id="play__video" hidden src="https://www.youtube.com/embed/mLRbZJS5A_E"
-                                        frameborder="0" allowfullscreen></iframe>
+                                    <iframe id="play__video" src="https://www.youtube.com/embed/-BhLPD_xvBI"
+                                        title="YouTube video player" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen
+                                        hidden></iframe>
                                 </p>
                             </div>
                         </div>
@@ -292,7 +295,7 @@
             </div>
         </div>
         <div class="bg__pattern-effect">
-            <img class="bg__img" src="http://dorsin.svelte.themesbrand.com/images/bg-pattern.png" alt=""
+            <img class="bg__img" src="./assets/bg-pattern.png" alt=""
                 draggable="false">
         </div>
     </section>
