--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             emailjs.init("user_jl5VpeVakRdeOB5W1XDRJ");
         })();
     </script>
-    <title>Rockville Robotics</title>
+    <title>MCC School</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <nav class="fixed-top nav__custom">
             <div class="nav__container ">
                 <div class="nav__logo">
-                    <a href="#" class="nav__logo--link text-uppercase" draggable="false">Incredibots</a>
+                    <a href="#" class="nav__logo--link text-uppercase" draggable="false">MCC School</a>
                 </div>
                 <ul class="nav__link--list">
                     <li class="nav__link">
@@ -112,18 +112,19 @@
                     <div class="container">
                         <div class="row">
                             <div class="header__content">
-                                <h1 class="header__title">Rockville Robotics Club</h1>
+                                <h1 class="header__title">MCC Masjid School</h1>
                                 <p class="header__para">Etiam sed.Interdum consequat proin vestibulum class at.</p>
                                 <p class="play__btn--wrapper">
                                     <a href="#" class="play__btn--icon click">
                                         <i class="fas fa-play"></i>
                                     </a>
-                                    <iframe id="play__video" src="https://www.youtube.com/embed/-BhLPD_xvBI"
-                                        title="YouTube video player" frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen
-                                        hidden></iframe>
                                 </p>
+                            </div>
+                            <div class="video__wrapper">
+                                <iframe id="play__video" src="https://www.youtube.com/embed/-BhLPD_xvBI"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen hidden></iframe>
                             </div>
                         </div>
                     </div>
@@ -282,7 +283,7 @@
             <div class="row">
                 <div class="parts__content">
                     <h2 class="parts__content--title">
-                        Parts List
+                        MCC Quickschools
                     </h2>
                     <p class="parts__content--para">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, mollitia in at cupiditate
@@ -295,15 +296,14 @@
             </div>
         </div>
         <div class="bg__pattern-effect">
-            <img class="bg__img" src="./assets/bg-pattern.png" alt=""
-                draggable="false">
+            <img class="bg__img" src="./assets/bg-pattern.png" alt="" draggable="false">
         </div>
     </section>
     <section id="builds">
         <div class="container">
             <div class="row builds__row">
                 <div class="header__content values__header--content">
-                    <h1 class="header__title values__header--title">Our Builds</h1>
+                    <h1 class="header__title values__header--title">Class Prices</h1>
                     <div class="section__title--border"></div>
                     <p class="header__para values__header--para">Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Velit earum natur, libero maiores eum, consectetur..
