--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             emailjs.init("user_jl5VpeVakRdeOB5W1XDRJ");
         })();
     </script>
-    <title>MCC School</title>
+    <title>Incredibots Rockville Robotics</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <nav class="fixed-top nav__custom">
             <div class="nav__container ">
                 <div class="nav__logo">
-                    <a href="#" class="nav__logo--link text-uppercase" draggable="false">MCC School</a>
+                    <a href="#" class="nav__logo--link text-uppercase" draggable="false">Incredibots</a>
                 </div>
                 <ul class="nav__link--list">
                     <li class="nav__link">
@@ -112,14 +112,14 @@
                     <div class="container">
                         <div class="row">
                             <div class="header__content">
-                                <h1 class="header__title">MCC Masjid School</h1>
+                                <h1 class="header__title">Robotics Club</h1>
                                 <p class="header__para">Etiam sed.Interdum consequat proin vestibulum class at.</p>
                                 <p class="play__btn--wrapper">
                                     <a href="#" class="play__btn--icon click">
                                         <i class="fas fa-play"></i>
                                     </a>
-                                </p>
                             </div>
+                            </p>
                             <div class="video__wrapper">
                                 <iframe id="play__video" src="https://www.youtube.com/embed/-BhLPD_xvBI"
                                     title="YouTube video player" frameborder="0"
