--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="row">
                 <div class="parts__content">
                     <h2 class="parts__content--title">
-                        MCC Quickschools
+                        Parts List
                     </h2>
                     <p class="parts__content--para">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, mollitia in at cupiditate
@@ -303,7 +303,7 @@
         <div class="container">
             <div class="row builds__row">
                 <div class="header__content values__header--content">
-                    <h1 class="header__title values__header--title">Class Prices</h1>
+                    <h1 class="header__title values__header--title">Robot Builds and Specs</h1>
                     <div class="section__title--border"></div>
                     <p class="header__para values__header--para">Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Velit earum natur, libero maiores eum, consectetur..
