small styling changes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="row">
                             <div class="header__content">
                                 <h1 class="header__title">Robotics Club</h1>
-                                <p class="header__para">Etiam sed.Interdum consequat proin vestibulum class at.</p>
+                                <p class="header__para">3rd place regional and 5th place international comp. contenders</p>
                                 <p class="play__btn--wrapper">
                                     <a href="#" class="play__btn--icon click">
                                         <i class="fas fa-play"></i>
@@ -155,8 +155,9 @@
                 <div class="header__content values__header--content">
                     <h1 class="header__title values__header--title">Our Values</h1>
                     <div class="section__title--border"></div>
-                    <p class="header__para values__header--para">Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Velit earum natur, libero maiores eum, consectetur..
+                    <p class="header__para values__header--para">The mission of Incredibots is to inspire young students
+                        to be science and tech leaders and innovators, by engaging them in exciting mentor-based
+                        programs that inspire innovation
                     </p>
                 </div>
                 <div class="value__wrapper">
@@ -263,7 +264,7 @@
                                 Lorem ipsum dolor sit amet consectetur
                             </li>
                         </ul>
-                        <button href="#" class="btn">
+                        <button href="#" class="btn no--cursor">
                             Learn More
                             <i class="fas fa-arrow-right"></i>
                         </button>
@@ -289,7 +290,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, mollitia in at cupiditate
                         distinctio omnis quos accu
                     </p>
-                    <button href="#" class="btn parts__btn">
+                    <button href="#" class="btn parts__btn no--cursor">
                         View Parts List & Cost
                     </button>
                 </div>
